--- a/FCompile/FCompile.csproj
+++ b/FCompile/FCompile.csproj
@@ -43,35 +43,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Old\ASM.cs" />
-    <Compile Include="Old\AST.cs" />
-    <Compile Include="Old\AST_T.cs" />
     <Compile Include="Compiler.cs" />
-    <Compile Include="Old\OldLexer.cs" />
     <Compile Include="Lexer.cs" />
-    <Compile Include="Node\impl\ASSING.cs" />
-    <Compile Include="Node\impl\COND.cs" />
-    <Compile Include="Node\impl\DEC.cs" />
-    <Compile Include="Node\impl\EXPRES.cs" />
-    <Compile Include="Node\impl\FACTOR.cs" />
-    <Compile Include="Node\impl\FUNC.cs" />
-    <Compile Include="Node\impl\ID.cs" />
-    <Compile Include="Node\INODE.cs" />
-    <Compile Include="Node\impl\INPUT.cs" />
-    <Compile Include="Node\IOPER.cs" />
-    <Compile Include="Node\impl\OUTPUT.cs" />
-    <Compile Include="Node\impl\PROG.cs" />
-    <Compile Include="Node\impl\RETURN.cs" />
-    <Compile Include="Node\impl\RL.cs" />
-    <Compile Include="Node\impl\SG.cs" />
-    <Compile Include="Node\impl\TERM.cs" />
-    <Compile Include="Node\impl\TYPE.cs" />
-    <Compile Include="Old\PT.cs" />
-    <Compile Include="Old\PTT.cs" />
-    <Compile Include="Old\OldParser.cs" />
+    <Compile Include="Node\impl\AssignmentNode.cs" />
+    <Compile Include="Node\impl\ConditionNode.cs" />
+    <Compile Include="Node\impl\DeclarationNode.cs" />
+    <Compile Include="Node\impl\ExpressionNode.cs" />
+    <Compile Include="Node\impl\FactorNode.cs" />
+    <Compile Include="Node\impl\FunctionNode.cs" />
+    <Compile Include="Node\impl\IdentifierNode.cs" />
+    <Compile Include="Node\impl\IntegerNode.cs" />
+    <Compile Include="Node\impl\OperationSign.cs" />
+    <Compile Include="Node\IOperationSign.cs" />
+    <Compile Include="Node\INode.cs" />
+    <Compile Include="Node\impl\InputNode.cs" />
+    <Compile Include="Node\IOperation.cs" />
+    <Compile Include="Node\impl\OutputNode.cs" />
+    <Compile Include="Node\impl\ProgramNode.cs" />
+    <Compile Include="Node\impl\ReturnNode.cs" />
+    <Compile Include="Node\impl\RuleNode.cs" />
+    <Compile Include="Node\impl\SignNode.cs" />
+    <Compile Include="Node\impl\TermNode.cs" />
+    <Compile Include="Node\impl\TypeNode.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Indent.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="TokenType.cs" />
   </ItemGroup>
