--- a/FCompile/FCompile.csproj
+++ b/FCompile/FCompile.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Compiler.cs" />
     <Compile Include="Lexer.cs" />
+    <Compile Include="Node\IExp.cs" />
     <Compile Include="Node\impl\AssignmentNode.cs" />
     <Compile Include="Node\impl\ConditionNode.cs" />
     <Compile Include="Node\impl\DeclarationNode.cs" />
@@ -54,6 +55,7 @@
     <Compile Include="Node\impl\IdentifierNode.cs" />
     <Compile Include="Node\impl\IntegerNode.cs" />
     <Compile Include="Node\impl\OperationSign.cs" />
+    <Compile Include="Node\impl\PlusNode.cs" />
     <Compile Include="Node\IOperationSign.cs" />
     <Compile Include="Node\INode.cs" />
     <Compile Include="Node\impl\InputNode.cs" />
@@ -69,6 +71,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Indent.cs" />
+    <Compile Include="RPN.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="TokenType.cs" />
   </ItemGroup>
