Добавлено немного ассемблера.

--- a/FCompile/FCompile.csproj
+++ b/FCompile/FCompile.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Compiler.cs" />
     <Compile Include="Lexer.cs" />
+    <Compile Include="Node\IDeclaration.cs" />
     <Compile Include="Node\IExp.cs" />
     <Compile Include="Node\impl\AssignmentNode.cs" />
     <Compile Include="Node\impl\ConditionNode.cs" />
