--- a/FCompile/FCompile.csproj
+++ b/FCompile/FCompile.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compiler.cs" />
+    <Compile Include="Grammar.cs" />
     <Compile Include="Lexer.cs" />
     <Compile Include="Node\IDeclaration.cs" />
     <Compile Include="Node\IExp.cs" />
@@ -72,12 +76,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Indent.cs" />
     <Compile Include="RPN.cs" />
+    <Compile Include="Rule.cs" />
+    <Compile Include="ShiftReduceParser.cs" />
     <Compile Include="Token.cs" />
     <Compile Include="TokenType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Examples\main.fc" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
